--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <ul class='employee-list'></ul>
 </div>
 
+<script src="phonegap.js"></script>
 <script src="lib/jquery-1.10.2.js"></script>
 <script src="js/storage/memory-store.js"></script>
 <script src="js/storage/websql-store.js"></script>
